[FIX] overflow

--- a/app/public/assets/css/application.css
+++ b/app/public/assets/css/application.css
@@ -1,5 +1,5 @@
 #chat-text {
-  overflow: auto;
+  overflow: hidden;
   height: 500px;
   background: white url("/assets/img/chatLoader.gif") center center no-repeat;
 
